Update ParkourCommand.java